resource_template/initialize/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "storageAccountName": {
      "type": "string",
      "metadata": {
        "description": "storage account name"
      },
      "defaultValue": "mcssta"
    },
    "acrName": {
      "type": "string",
      "minLength": 5,
      "maxLength": 50,
      "metadata": {
        "description": "azure container registry name"
      },
      "defaultValue": "acrmcssta"
    },
    "securityGroupName": {
      "type": "string",
      "metadata": {
        "description": "security group name"
      },
      "defaultValue": "mcsnsg"
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "virtual network name"
      },
      "defaultValue": "mcsvn"
    },
    "subnetName": {
      "type": "string",
      "metadata": {
        "description": "subnet name"
      },
      "defaultValue": "mcssn"
    }
  },
  "variables": {
    "storageAccountType": "Standard_LRS",
    "storageAccountKind": "Storage",
    "vnetAddressPrefix": "10.0.1.0/24",
    "subnetAddressPrefix": "10.0.1.0/24",
    "acrStorageName": "[concat('acr', uniqueString(resourceGroup().id))]",
    "acrStorageId": "[resourceId('Microsoft.Storage/storageAccounts', variables('acrStorageName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2017-06-01",
      "name": "[parameters('storageAccountName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('storageAccountType')]",
      },
      "kind": "[variables('storageAccountKind')]",
      "properties": {
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2017-06-01",
      "name": "[variables('acrStorageName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('storageAccountType')]",
      },
      "kind": "[variables('storageAccountKind')]",
      "properties": {
      },
      "tags": {
        "displayName": "ACR Image's storage",
        "container.registry": "[parameters('acrName')]"
      }
    },
    {
      "type": "Microsoft.ContainerRegistry/registries",
      "apiVersion": "2017-03-01",
      "name": "[parameters('acrName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[variables('acrStorageId')]"
      ],
      "properties": {
        "adminUserEnabled": "true",
        "storageAccount": {
          "accessKey": "[listKeys(variables('acrStorageId'),'2017-06-01').keys]",
          "name": "[variables('acrStorageName')]"
        }
      },
      "tags": {
        "displayName": "Container Registry",
        "container.registry": "[parameters('acrName')]"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-04-01",
      "name": "[parameters('securityGroupName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "100",
              "direction": "Inbound"
            }
          },
          {
            "name": "http",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "110",
              "direction": "Inbound"
            }
          },
          {
            "name": "jenkins",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "120",
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2017-04-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/',parameters('securityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('securityGroupName'))]"
              }
            }
          }
        ]
      }
    }
  ],
  "outputs": {
  }
}
